# Wingman

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  readme.md  tailwind.config.js  tailwind.css
_site/: index.html  page.css
example/: deno.json  main.ts  main_test.ts
example/_site/: index.html  index.md  templating.html
example/_site/static/: page.css
example/models/: parser.ts
example/templates/: page.hbs
example/templates/partials/: nav.hbs
example/www/: index.md  templating.md
example/www/static/: page.css
src/: cli.rs  frontmatter.rs  lib.rs  main.rs
src/app/init/: build.rs  new.rs
src/forge/: mod.rs  plant.rs  seed.rs
templates/: page.hbs
templates/partials/: nav.hbs
testdev/: seed.json
