[package]
name = "wingman"
version = "0.0.11"
authors = ["Tristan Isham <tristan@isham.co>"]
edition = "2018"
description = "Static site generator and theming engine."
homepage = "https://wingman-rs.neocities.org/"
license = "AGPL-3.0"
readme = "readme.md"
repository = "https://github.com/tristanisham/Wingman"
keywords = ["Gopher", "Gemini", "binary", "Build-Tools", "web-dev"]
categories = ["command-line-utilities", "command-line-interface", "development-tools", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
json = "0.12.4"
pulldown-cmark = "0.8.0"
chrono = "0.4.19"
# regex = "1.4.3"


