[package]
name = "wingman"
version = "0.1.0"
authors = ["Tristan Isham <tristan@isham.co>"]
edition = "2021"
description = "Static site generator and theming engine."
homepage = "https://wingman-rs.neocities.org/"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/tristanisham/Wingman"
keywords = [
    "static site generator",
    "command line tool",
    "web tool",
    "Build-Tools",
    "web-dev",
    "cli",
]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "development-tools",
    "web-programming",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "6.1.1" }
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["unicode", "derive"] }
comrak = "0.21.0"
lightningcss = "1.0.0-alpha.55"
rayon = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
handlebars = "5.1.0"
