[package]
name = "wingman"
version = "0.1.1"
authors = ["Tristan Isham <tristan@isham.co>"]
edition = "2024"
description = "A runtime for websites and a static site generator."
homepage = "https://wingman-rs.neocities.org/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tristanisham/Wingman"
keywords = [
    "web",
    "framework",
    "Build-Tools", 
    "cli",
]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "development-tools",
    "web-programming",
]
exclude = [
    "example/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = { version = "6.1.1" }
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["unicode", "derive"] }
comrak = "0.21.0"
lightningcss = "1.0.0-alpha.55"
rayon = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
handlebars = "5.1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
gray_matter = "0.2.6"
ansi_term = "0.12.1"
walkdir = "2.5.0"
thiserror = "1.0.58"
futures = "0.3.30"
